--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,71 +1,17 @@
 ---
 title: Introduction
-description: 'Welcome to the home of your new documentation'
+description: 'Welcome to the Anaphero API docs. We provide clinics with developer-friendly APIs that complete outbound tasks over the phone.'
 ---
 
-<img
-  className="block dark:hidden"
-  src="/images/hero-light.svg"
-  alt="Hero Light"
-/>
-<img
-  className="hidden dark:block"
-  src="/images/hero-dark.svg"
-  alt="Hero Dark"
-/>
+## How it works
 
-## Setting up
+Our API is capable of completing a variety of clinical and administrative tasks for healthcare clinics over the phone. We offer a catalogue of Task Definitions, each designed to complete an outbound task over the phone. Some examples include:
 
-The first step to world-class documentation is setting up your editing environments.
+- Scheduling an appointment with a patient
+- Sending reminders to a patient via phone call
+- Collecting information from a patient
+- Custom b2b phone calls to offload administrative tasks (reach out to learn more: dev@anaphero.com)
 
-<CardGroup cols={2}>
-  <Card
-    title="Edit Your Docs"
-    icon="pen-to-square"
-    href="https://mintlify.com/docs/quickstart"
-  >
-    Get your docs set up locally for easy development
-  </Card>
-  <Card
-    title="Preview Changes"
-    icon="image"
-    href="https://mintlify.com/docs/development"
-  >
-    Preview your changes before you push to make sure they're perfect
-  </Card>
-</CardGroup>
+## What sets us apart?
 
-## Make it yours
-
-Update your docs to your brand and add valuable content for the best user conversion.
-
-<CardGroup cols={2}>
-  <Card
-    title="Customize Style"
-    icon="palette"
-    href="https://mintlify.com/docs/settings/global"
-  >
-    Customize your docs to your company's colors and brands
-  </Card>
-  <Card
-    title="Reference APIs"
-    icon="code"
-    href="https://mintlify.com/docs/api-playground/openapi"
-  >
-    Automatically generate endpoints from an OpenAPI spec
-  </Card>
-  <Card
-    title="Add Components"
-    icon="screwdriver-wrench"
-    href="https://mintlify.com/docs/components/accordion"
-  >
-    Build interactive features and designs to guide your users
-  </Card>
-  <Card
-    title="Get Inspiration"
-    icon="stars"
-    href="https://mintlify.com/customers"
-  >
-    Check out our showcase of our favorite documentation
-  </Card>
-</CardGroup>
+We build voice AI tasks speecifically for healthcare organizations. That means our tools are built for healthcare workflows, healthcare technology, healthcare data standards, and safety.
