--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,6 +1,6 @@
 ---
 title: Introduction
-description: 'Welcome to the Anaphero API docs. We provide clinics with developer-friendly APIs that complete outbound tasks over the phone.'
+description: 'Welcome to the Anaphero API docs. This section will help you get started with our API'
 ---
 
 ## How it works
