--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,17 +1,11 @@
 ---
-title: Introduction
-description: 'Welcome to the Anaphero API docs. This section will help you get started with our API'
+title: Welcome
+description: 'Welcome to the Anaphero API docs. Our API helps you programmatically manage your Anaphero workflows.'
 ---
 
-## How it works
+## Getting Started
 
-Our API is capable of completing a variety of clinical and administrative tasks for healthcare clinics over the phone. We offer a catalogue of Task Definitions, each designed to complete an outbound task over the phone. Some examples include:
+- Request an API add-on and API key @ dev@anaphero.com
+- Follow the API Reference -> quickstart guide to get started
 
-- Scheduling an appointment with a patient
-- Sending reminders to a patient via phone call
-- Collecting information from a patient
-- Custom b2b phone calls to offload administrative tasks (reach out to learn more: dev@anaphero.com)
-
-## What sets us apart?
-
-We build voice AI tasks speecifically for healthcare organizations. That means our tools are built for healthcare workflows, healthcare technology, healthcare data standards, and safety.
+We are rapidly developing our API capabilities and would love to hear from you if you have feature requests at dev@anaphero.com.
