--- a/api-reference/introduction.mdx
+++ b/api-reference/introduction.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Quickstart'
-description: 'Get started with the Anaphero API in minutes'
+description: 'Get started with the Clarion API in minutes'
 ---
 
 ## Setup your environment
