--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,6 +1,6 @@
 ---
 title: Welcome
-description: 'Welcome to the Anaphero API docs. Our API helps you programmatically manage your Anaphero workflows.'
+description: 'Welcome to the Clarion API docs. Our API helps you programmatically manage your Clarion workflows.'
 ---
 
 ## Getting Started
