--- a/api-reference/introduction.mdx
+++ b/api-reference/introduction.mdx
@@ -24,7 +24,7 @@ This section will walk you through configuring your API key and sending your fir
     key via secure sharing. It should look something like this: ```prod_api_5394gcf5-77ec-4c1d-87b7-dddc75909462```
 
     If you do not have an API key or need help accessing
-    it, please reach out to dev@anaphero.com
+    it, please reach out to support@clarionhealth.ai
 
   </Accordion>
 
