--- a/api-reference/introduction.mdx
+++ b/api-reference/introduction.mdx
@@ -11,9 +11,9 @@ This section will walk you through configuring your API key and sending your fir
 
 <AccordionGroup>
 <Accordion icon='code' title='Sending your first request'>
-    The base URL for the API is: ```https://api.anaphero.com/v1```. You can test out your connection by sending the following request:
+    The base URL for the API is: ```https://api.clarionhealth.ai/v1```. You can test out your connection by sending the following request:
 
-    ```GET https://api.anaphero.com/v1/health```
+    ```GET https://api.clarionhealth.ai/v1/health```
 
     You should see a response that looks like:
     ```[200] {"message": "healthy"}```
@@ -33,7 +33,7 @@ This section will walk you through configuring your API key and sending your fir
 
 Here is an example of a request that will list all of the recent call records for your organization:
 
-`GET https://api.anaphero.com/v1/call`
+`GET https://api.clarionhealth.ai/v1/call`
 
 `Authorization: Bearer prod_api_5394gcf5-77ec-4c1d-87b7-dddc75909462`
 
