--- a/introduction.mdx
+++ b/introduction.mdx
@@ -5,7 +5,7 @@ description: 'Welcome to the Clarion API docs. Our API helps you programmaticall
 
 ## Getting Started
 
-- Request an API add-on and API key from support@clarionhealth.ai
+- Request an API add-on and API key from support@clarionhealth.com
 - Follow the API Reference -> quickstart guide to get started
 
-We are rapidly developing our API capabilities and would love to hear from you if you have feature requests at support@clarionhealth.ai
+We are rapidly developing our API capabilities and would love to hear from you if you have feature requests at support@clarionhealth.com
